============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

XCSoar TE
* user interface
  - new logo
  - traditional Flarm radar dialog
    (the "new" Flarm radar page is too cluttered)
  - menu label improvements
    (e.g. Raw logger -> NMEA logger)
  - removed "Auto bugs" feature
    (not useful if the rate can't be configured)
  - renamed "Vibrant" terrain color ramp to "SeeYou"
    (the colors were taken from SeeYou and former users will find it easier)
  - shade rest of the screen when dialog is open
    (replaces the basic shadow effect of the dialogs)
  - removed "Ack" button from map item list
    (the "Ack" function is not used as frequently as "Goto" and is only
     one more tap on the screen away. this additional button is cluttering
     the dialog)
* infoboxes
  - renamed "Height AGL" to "Altitude AGL"
    (most users don't know the difference between height and altitude,
     let's not make it harder for them than it already is)
  - changed default infobox geometry and contents
  - enabled "Shaded" infobox styling by default
    (looks better and helps to guide the eye to the right infobox)
* map
  - changed trail length and type default to "full" and "Vario #2 with dots"
    ("Vario #2" has better contrast and having the dots is even better)
  - enabled the ground track line by default
    (makes it easier to aim at distant things)
  - use "North up" with "Track" map shift bias at "35%" by default
    (north up is most common and the 35% shows more of the task ahead
     than what is behind you already)
  - changed default airspace colors
    (closer to the German ICAO charts)
  - adjusted default terrain brightness and contrast
  - changed airport symbol default to "traffic lights"
    (more intuitive and easier to interpret)
  - show full waypoint names by default
  - show reachable airport names outlined